Fixed "At 320px screen width, the font size of the logo is too large and creating a white bar down the right side of the screen."

--- a/style.css
+++ b/style.css
@@ -194,3 +194,14 @@ footer p {
     flex-direction: row;
   }
 }
+
+@media all and (max-width: 1000px) {
+  .logo {
+    display: flex;
+    justify-content: center;
+    font-family: "Pangolin", cursive;
+    font-size: 10vw;
+    color: #fff;
+    margin: auto;
+  }
+}
